# miGuardian

./: .gitignore  Copia de original miguardian.db  Copia de settings.json  README.md  Untitled-1.jsonc  client_secrets.json  credentials.json  datos_qr.csv  dev.txt  enums.py  estudiantes_sin_entrada.json  eventNotification.py  eventRegister.json  main.py  mainUI.py  miguardian.db  miguardian.kv  miguardian_153.db  miguardian_actual.db  miguardian_actual_mayo.db  miguardian_albert_2025.db  miguardian_albert_einstein.db  miguardian_castillito.db  miguardian_castillito_2025.db  miguardian_ernesto_ramon_corona.db  miguardian_jose_vasconcelos_primaria.db  miguardian_jose_vasconcelos_secundaria.db  miguardian_las_americas.db  miguardian_las_americas_2025.db  miguardian_lazaro_Cardenas.db  miguardian_lazaro_cardenas_2025.db  miguardian_new.db  miguardian_old.db  miguardian_paulo_2025.db  miguardian_regresar.db  miguardian_secundaria_98_2025.db  miguardian_valentin_gomez_farias.db  miguardian_victoria_kent.db  noCheckInEstudent.py  pyproject.toml  (+7 more)
alembic/: env.py
alembic/versions/: 698b97c6ae9d_initial_migration.py  b65ad8a36758_initial_migration.py
database/: fakedata.py  miguardiandb.py  updatedb.py
interfaces/: mainwindows.ui  mainwindows_ui.py
respaldos/: miguardian_2024-04-09.db
scripts/: extraer_imagenes_de_subcarpetas.py  input.xlsx  input_old.xlsx  mapeo.csv  normalizar_formulario.py
service/: megasync.py
util/: JsonFormatter.py  datajson.py  datasync.py  drivesync.py  load_handler_logging.py  notification.py  offline.py  settings.yaml  temppath.py
