[project]
name = "miguardian"
version = "0.1.0"
description = "Guardian management system"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "anyio==3.7.0",
    "autopep8==2.0.2",
    "cachetools==5.3.1",
    "certifi==2023.5.7",
    "charset-normalizer==3.1.0",
    "distlib==0.3.6",
    "docutils==0.20.1",
    "filelock==3.9.0",
    "google-auth==2.21.0",
    "google-auth-oauthlib==1.0.0",
    "gspread==5.9.0",
    "gspread-dataframe>=4.0.0",
    "h11==0.14.0",
    "httpcore==0.17.2",
    "httpx==0.24.1",
    "idna==3.4",
    "kivy>=2.3.1",
    "kivy-garden==0.1.5",
    "kivymd>=1.2.0",
    "mega-py==1.0.8",
    "numpy>=1.26.0",
    "oauthlib==3.2.2",
    "orjson==3.9.1",
    "pandas>=2.1.0",
    "pathlib==1.0.1",
    "pillow>=10.0.0",
    "platformdirs==3.0.0",
    "pyasn1==0.5.0",
    "pyasn1-modules==0.3.0",
    "pycodestyle==2.10.0",
    "pycryptodome==3.18.0",
    "pygame>=2.5.0",
    "pygments==2.15.1",
    "pytelegrambotapi==4.12.0",
    "python-dateutil==2.8.2",
    "python-telegram-bot==20.3",
    "pytz==2023.3",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rsa==4.9",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sqlalchemy>=2.0.44",
    "tenacity==5.1.5",
    "tzdata==2023.3",
    "urllib3==1.26.16",
    "virtualenv==20.19.0",
    "watchdog==3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
